logs/freemindlatex.log
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Compiling './bin/portserver.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyPDF2'...
Listing './lib/python3.5/site-packages/PyPDF2-1.26.0.egg-info'...
Listing './lib/python3.5/site-packages/bibtexparser'...
Listing './lib/python3.5/site-packages/bibtexparser-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/freemindlatex'...
Compiling './lib/python3.5/site-packages/freemindlatex/__main__.py'...
***   File "./lib/python3.5/site-packages/freemindlatex/__main__.py", line 282
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/freemindlatex/convert.py'...
***   File "./lib/python3.5/site-packages/freemindlatex/convert.py", line 958
    print '%s\nUsage: %s ARGS\n%s' % (e, sys.argv[0], gflags.FLAGS)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/freemindlatex/run_app.py'...
***   File "./lib/python3.5/site-packages/freemindlatex/run_app.py", line 192
    print "Unable to recognize command %r" % argv
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/freemindlatex-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/apputils'...
Compiling './lib/python3.5/site-packages/google/apputils/app.py'...
***   File "./lib/python3.5/site-packages/google/apputils/app.py", line 95
    print 'Try --helpfull to get a list of all flags.'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/google/apputils/appcommands.py'...
***   File "./lib/python3.5/site-packages/google/apputils/appcommands.py", line 299
    except app.UsageError, error:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/google/apputils/basetest.py'...
***   File "./lib/python3.5/site-packages/google/apputils/basetest.py", line 1063
    0600)
       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/google/apputils/file_util.py'...
***   File "./lib/python3.5/site-packages/google/apputils/file_util.py", line 45
    def Write(filename, contents, overwrite_existing=True, mode=0666, gid=None):
                                                                   ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/google/apputils/run_script_module.py'...
***   File "./lib/python3.5/site-packages/google/apputils/run_script_module.py", line 122
    print 'Stub script %s (auto-generated). Options:' % sys.argv[0]
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/google_apputils-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/grpc'...
Listing './lib/python3.5/site-packages/grpc/_cython'...
Listing './lib/python3.5/site-packages/grpc/_cython/_credentials'...
Listing './lib/python3.5/site-packages/grpc/_cython/_cygrpc'...
Listing './lib/python3.5/site-packages/grpc/beta'...
Listing './lib/python3.5/site-packages/grpc/framework'...
Listing './lib/python3.5/site-packages/grpc/framework/common'...
Listing './lib/python3.5/site-packages/grpc/framework/foundation'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/base'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/face'...
Listing './lib/python3.5/site-packages/grpcio-1.8.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/portpicker-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/timeout_decorator'...
Listing './lib/python3.5/site-packages/timeout_decorator-0.4.0.egg-info'...
Listing './share'...
Listing './share/freemindlatex'...
Listing './share/freemindlatex/example'...
Listing './share/freemindlatex/freemind'...
Listing './share/freemindlatex/freemind/accessories'...
Listing './share/freemindlatex/freemind/browser'...
Listing './share/freemindlatex/freemind/doc'...
Listing './share/freemindlatex/freemind/lib'...
Listing './share/freemindlatex/freemind/lib/SimplyHTML'...
Listing './share/freemindlatex/freemind/lib/jibx'...
Listing './share/freemindlatex/freemind/plugins'...
Listing './share/freemindlatex/freemind/plugins/collaboration'...
Listing './share/freemindlatex/freemind/plugins/collaboration/socket'...
Listing './share/freemindlatex/freemind/plugins/help'...
Listing './share/freemindlatex/freemind/plugins/map'...
Listing './share/freemindlatex/freemind/plugins/script'...
Listing './share/freemindlatex/freemind/plugins/svg'...
Listing './share/freemindlatex/static_files'...
Listing './share/python-wheels'...
